# f1_rating_model

./: LICENSE  README.md  app.py  f1_rating_model.py  f1_rating_model_functions.py  f1_rating_model_ml.ipynb  f1_rating_model_notebook.ipynb  full_ratings.csv  pyproject.toml  test.py
f1_rating_model/f1_rating_model/src/model/pipeline/: data_collection.py
f1_rating_model/src/: runner.py
f1_rating_model/src/model/: model_service.py
f1_rating_model/src/model/pipeline/: data_preparation.py  train_model.py
f1_rating_model/src/model/raw/: pre_f1_yoe.csv
templates/: 3yma_peak_ranking.html  5yma_peak_ranking.html  annual_driver_ranking.html  driver_career_annual_scores.html  driver_list.html  index.html  year_list.html
