[tool.poetry]
name = "f1_rating_model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = ">=1.21.6,<1.28.0"
pandas = "^2.2.2"
loguru = "^0.7.2"
pygam = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
